[package]
name = "dela_backend"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>", "Joacim Nidén <jocke@niden.se>"]
edition = "2018"


[workspace]
members = [ ".", "services" ]

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
services = { path="./services" }

tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros","rt-threaded"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
tonic-build = { version="0.3", features = ["prost"] }

[dev-dependencies]
futures = "0.3"