[package]
name = "dela_backend"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>", "Joacim Nidén <jocke@niden.se>"]
edition = "2018"
publish = false

[workspace]
members = [ ".", "services" ]

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
services = { path="./services" }

tonic = "0.4"
prost = "0.7"
dotenv = "0.15.0"

# Runtime
tokio = { version = "1.0", features = ["macros","rt-multi-thread", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = { version="0.4", features = ["prost"] }

[dev-dependencies]