[package]
name = "dela_backend"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>", "Joacim Nidén <jocke@niden.se>"]
edition = "2018"
publish = false

[workspace]
members = [ ".", "synchronizer", "resizer" ]

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
# For simplicity sake we start the sub modules as threads
# This could/should be broken out into separate services for deployment
synchronizer = { path= "./synchronizer" }
resizer = { path = "./resizer" }

tonic = "0.4"
prost = "0.7"
dotenv = "0.15"
redis = "0.20"

uuid = { version = "0.8", features = ["v4"] }
mongodb = "1.1.1"

# Runtime
tokio = { version = "1.0", features = ["macros","rt-multi-thread", "net", "fs"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = { version="0.4", features = ["prost"] }

[dev-dependencies]