[package]
name = "services"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>", "Joacim Nidén <jocke@niden.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "0.2", features = ["macros", "fs"] }
thiserror = "1.0"